new CheatACtivity created, layoout activity_cheat, cheat button added to activity_quiz, manifest file has new cheatAtcitiviy entry, INTENTS ARE IMPLEMENTED BETWEEN cheat and quiz activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="true_toast">Corrct</string>
     <string name="next_button">Next</string>
     <string name="previous_button">Previous</string>
+    <string name="cheat_button">Cheat</string>
     <string name="false_toast">Wrong choice</string>
 </resources>
